# fund-traceability-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/: local_search_web_ui.py
data/samples/: README.md  expected_true_exposure_sample.csv  fund_aum_sample.csv  raw_fund_links_sample_with_edge_cases.csv  raw_funds_sample.csv  raw_holdings_sample_with_edge_cases.csv
docs/: architecture.md  data_contract.md  data_model.md
pipelines/: run_build_mart.py  run_build_staging.py  run_db_smoke_test.py  run_load_samples_to_raw.py  run_local_search_ui.py  run_local_search_web_ui.py  run_refresh_all.py  run_validate_sample_expectation.py
pipelines/prefect/: __init__.py  run_refresh_flow.py
sql/: 00_create_databases.sql  10_staging_tables.sql  20_mart_tables.sql  30_indexes.sql
src/: __init__.py
src/config/: __init__.py  settings.py
src/db/: connections.py
src/extract/: __init__.py  global_funds_reader.py  thai_funds_reader.py
src/load/: __init__.py  write_mart.py  write_staging.py
src/models/: enums.py
src/models/schemas/: __init__.py  exposure.py  fund.py  holding.py  link.py
src/services/: __init__.py  exposure_service.py  search_service.py  traceability_service.py
src/transform/calc/: __init__.py  effective_exposure.py  trace_path_builder.py
src/utils/: __init__.py  hashing.py  retry.py  time.py  validation.py
tests/unit/: test_exposure_calculation.py  test_normalizers.py  test_partition_idempotency.py  test_sample_expectation_validator.py  test_staging_normalization.py
(+6 files in other folders)
